--- a/wiki/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/Macro_Cut_Object_For_Magnets.html
@@ -13,13 +13,13 @@ Macro Cut Object for Magnets
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Cut an object along a plane and add aligned magnet holes with surface collision detection. Creates two parts with perfectly aligned holes for embedding magnets that allow the parts to snap together.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.19+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">ToolBar Icon</a><br>Author: Spkane<br>
+<td class="ctEven left macro-description">Cut an object along a plane and add aligned magnet holes with surface collision detection. Creates two parts with perfectly aligned holes for embedding magnets that allow the parts to snap together.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.19+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
 </th></tr>
 <tr>
-<td class="ctEven macro-author"><a href="User;Spkane.html" title="User:Spkane">Spkane</a>
+<td class="ctEven macro-author"><a href="index.php?title=User;Sean_P._Kane&amp;action=edit&amp;redlink=1.html" class="new" title="User:Sean P. Kane (page does not exist)">Sean P. Kane</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Download
@@ -74,38 +74,36 @@ Macro Cut Object for Magnets
 <p>This macro cuts a 3D object along a specified plane and automatically adds aligned magnet holes to both resulting pieces. The holes are positioned with intelligent collision detection to ensure they don't break through the outer walls of the object.
 </p><p>This is particularly useful for:
 </p>
-<ul><li>Creating multi-part prints that snap together with embedded magnets</li>
-<li>Splitting large objects for smaller 3D printer beds while maintaining alignment</li>
-<li>Adding magnetic closure mechanisms to enclosures and cases</li></ul>
+<ul><li>Creating multi-part prints that snap together with embedded magnets.</li>
+<li>Splitting large objects for smaller 3D printer beds while maintaining alignment.</li>
+<li>Adding magnetic closure mechanisms to enclosures and cases.</li></ul>
 <p><b>Key Features:</b>
 </p>
-<ul><li>Cut along preset planes (XY, XZ, YZ) or model datum planes</li>
-<li>Automatic hole placement with even distribution along the cut edge</li>
-<li>Surface collision detection prevents holes from breaking through walls</li>
-<li>Configurable hole diameter, depth, and count</li>
-<li>Preferred and minimum edge clearance settings</li>
-<li>Smart repositioning of holes when initial placement fails safety checks</li>
-<li>Creates PartDesign::Body objects with parametric Hole features</li>
-<li>Supports re-cutting already-cut objects (preserves existing holes)</li>
-<li>Automatically separates the two parts for easy viewing</li></ul>
+<ul><li>Cut along preset planes (XY, XZ, YZ) or model datum planes.</li>
+<li>Automatic hole placement with even distribution along the cut edge.</li>
+<li>Surface collision detection prevents holes from breaking through walls.</li>
+<li>Configurable hole diameter, depth, and count.</li>
+<li>Preferred and minimum edge clearance settings.</li>
+<li>Smart repositioning of holes when initial placement fails safety checks.</li>
+<li>Creates PartDesign::Body objects with parametric Hole features.</li>
+<li>Supports re-cutting already-cut objects (preserves existing holes).</li>
+<li>Automatically separates the two parts for easy viewing.</li></ul>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
-<ol><li>Open a document with the object you want to cut</li>
-<li>Optionally select the object and/or a datum plane before running the macro</li>
-<li>Run the macro from <b>Macro &rarr; Macros &rarr; CutObjectForMagnets &rarr; Execute</b></li>
+<ol><li>Open a document with the object you want to cut.</li>
+<li>Optionally select the object and/or a datum plane before running the macro.</li>
+<li>Run the macro from <b>Macro &rarr; Macros &rarr; CutObjectForMagnets &rarr; Execute</b>.</li>
 <li>In the dialog:
-<ul><li>Select the body to cut from the dropdown</li>
-<li>Choose the cut plane type (Preset or Model Plane)</li>
-<li>For preset planes, set the offset from origin</li>
+<ul><li>Select the body to cut from the dropdown.</li>
+<li>Choose the cut plane type (Preset or Model Plane).</li>
+<li>For preset planes, set the offset from origin.</li>
 <li>Configure magnet hole parameters:
-<ul><li><b>Diameter</b>: Hole diameter (should match your magnet size)</li>
-<li><b>Depth</b>: Hole depth from cut surface</li>
-<li><b>Number of Holes</b>: Total holes to create</li>
-<li><b>Edge Clearance (Preferred)</b>: Ideal distance from hole edge to object surface</li>
-<li><b>Edge Clearance (Minimum)</b>: Minimum acceptable clearance</li></ul></li></ul></li>
-<li>Click "Execute Cut"</li></ol>
+<ul><li><b>Diameter</b>: Hole diameter (should match your magnet size).</li>
+<li><b>Depth</b>: Hole depth from cut surface.</li>
+<li><b>Number of Holes</b>: Total holes to create.</li>
+<li><b>Edge Clearance (Preferred)</b>: Ideal distance from hole edge to object surface.</li>
+<li><b>Edge Clearance (Minimum)</b>: Minimum acceptable clearance.</li></ul></li></ul></li>
+<li>Click "Execute Cut".</li></ol>
 <figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=MacroCutObjectForMagnetsDialog.png&amp;filetimestamp=20260119180444&amp;.html" class="mw-file-description"><img src="File/MacroCutObjectForMagnetsDialog.png" decoding="async" width="400" height="427" class="mw-file-element" data-file-width="1022" data-file-height="1092"></a><figcaption></figcaption></figure>
-<p><br>
-</p>
 <h2><span class="mw-headline" id="Example">Example</span></h2>
 <p>This image shows a vase object in its original form, and after being cut multiple times with the macro. Magnets can then be inserted to object, and the object can be re-assembled. This example was to create a "breakable" vase for a theatrical stage performance, but there are many other potential uses as well.
 </p>
@@ -113,25 +111,25 @@ Macro Cut Object for Magnets
 <h2><span class="mw-headline" id="How_It_Works">How It Works</span></h2>
 <p><b>Cutting Process:</b>
 </p>
-<ol><li>Creates a large half-space box aligned with the cutting plane</li>
-<li>Uses boolean operations to split the object into two parts</li>
-<li>Creates PartDesign::Body containers for each half</li></ol>
+<ol><li>Creates a large half-space box aligned with the cutting plane.</li>
+<li>Uses boolean operations to split the object into two parts.</li>
+<li>Creates PartDesign::Body containers for each half.</li></ol>
 <p><b>Hole Placement Algorithm:</b>
 </p>
-<ol><li>Calculates hole positions evenly distributed along the cut face perimeter</li>
-<li>For each position, validates against BOTH parts (not just one)</li>
-<li>Uses preferred clearance first, falls back to minimum if needed</li>
-<li>Checks for hole-to-hole spacing (minimum 2x diameter)</li>
+<ol><li>Calculates hole positions evenly distributed along the cut face perimeter.</li>
+<li>For each position, validates against BOTH parts (not just one).</li>
+<li>Uses preferred clearance first, falls back to minimum if needed.</li>
+<li>Checks for hole-to-hole spacing (minimum 2x diameter).</li>
 <li>Repositions holes that fail safety checks using multiple strategies:
-<ul><li>Reduced clearance at same position</li>
-<li>Increased inset from edge</li>
-<li>Alternative positions along the perimeter</li></ul></li></ol>
+<ul><li>Reduced clearance at same position.</li>
+<li>Increased inset from edge.</li>
+<li>Alternative positions along the perimeter.</li></ul></li></ol>
 <p><b>Safety Features:</b>
 </p>
-<ul><li>Creates test cylinders to check if holes would break through walls</li>
-<li>Validates each hole against both the top and bottom parts</li>
-<li>Skips holes that cannot be safely placed</li>
-<li>Reports repositioned and skipped holes in the console</li></ul>
+<ul><li>Creates test cylinders to check if holes would break through walls.</li>
+<li>Validates each hole against both the top and bottom parts.</li>
+<li>Skips holes that cannot be safely placed.</li>
+<li>Reports repositioned and skipped holes in the console.</li></ul>
 <h2><span class="mw-headline" id="Parameters">Parameters</span></h2>
 <table class="wikitable">
 <tbody><tr>
@@ -175,16 +173,11 @@ Macro Cut Object for Magnets
 <td>0.5 mm
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Requirements">Requirements</span></h2>
-<ul><li>FreeCAD 0.19 or later</li>
-<li>An object with a solid shape (Part or PartDesign body)</li>
-<li>For model plane mode: a datum plane or object with planar faces</li></ul>
+<ul><li>FreeCAD 0.19 or later.</li>
+<li>An object with a solid shape (Part or PartDesign body).</li>
+<li>For model plane mode: a datum plane or object with planar faces.</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<ol><li>Download the macro file: <a href="index.php?title=Special;Upload&amp;wpDestFile=CutObjectForMagnets.FCMacro.html" class="new" title="CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a></li>
-<li>Copy the file to your FreeCAD macro directory:
-<ul><li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Macro/</span></li>
-<li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Macro/</span></li>
-<li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Macro/</span></li></ul></li>
-<li>Optionally, download the toolbar icon and place it in the same directory</li></ol>
+<ul><li>Install via the <b>FreeCAD Addon manager</b> or manually from the <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-macro-cut-for-magnets/">freecad-macro-cut-for-magnets repo on GitHub</a>.</li></ul>
 <h2><span class="mw-headline" id="Tips">Tips</span></h2>
 <ul><li><b>Magnet sizing</b>: Measure your magnets carefully. Common sizes are 3mm, 5mm, and 6mm diameter.</li>
 <li><b>Add tolerance</b>: Consider adding 0.1-0.2mm to the diameter for easier magnet insertion.</li>
@@ -194,30 +187,25 @@ Macro Cut Object for Magnets
 <h2><span class="mw-headline" id="Source_Code">Source Code</span></h2>
 <p>The full source code is hosted on GitHub:
 </p>
-<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-macro-cut-for-magnets/blob/main/macro/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro on GitHub</a></li></ul>
-<h2><span class="mw-headline" id="Script">Script</span></h2>
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p><p><br>
-<b>Macro_Cut_Object_For_Magnets.FCMacro</b>
-</p><p>- <a rel="nofollow" class="external free" href="https://github.com/spkane/freecad-macro-cut-for-magnets/blob/main/macro/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">https://github.com/spkane/freecad-macro-cut-for-magnets/blob/main/macro/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro</a>
-</p>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-macro-cut-for-magnets/">freecad-macro-cut-for-magnets on GitHub</a></li></ul>
 <h2><span class="mw-headline" id="Links">Links</span></h2>
-<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-macro-cut-for-magnets/">Full Documentation</a> - Complete guides and tutorials</li>
-<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-macro-cut-for-magnets">GitHub Repository</a> - Source code and issue tracker</li>
-<li><a href="Part_Slice.html" title="Part Slice">Part Slice</a> - FreeCAD's built-in slice tool</li>
-<li><a href="PartDesign_Hole.html" title="PartDesign Hole">PartDesign Hole</a> - Parametric hole feature documentation</li>
-<li><a href="PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> - Body container documentation</li></ul>
+<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-macro-cut-for-magnets/">Full Documentation</a> - Complete guides and tutorials.</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-macro-cut-for-magnets">GitHub Repository</a> - Source code and issue tracker.</li>
+<li><a href="Part_Slice.html" title="Part Slice">Part Slice</a> - FreeCAD's built-in slice tool.</li>
+<li><a href="PartDesign_Hole.html" title="PartDesign Hole">PartDesign Hole</a> - Parametric hole feature documentation.</li>
+<li><a href="PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> - Body container documentation.</li></ul>
+
 <!-- 
 NewPP limit report
-Cached time: 20260119191602
+Cached time: 20260119193615
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.063 seconds
-Real time usage: 0.092 seconds
-Preprocessor visited node count: 158/1000000
-Post&#8208;expand include size: 2639/2097152 bytes
-Template argument size: 917/2097152 bytes
+CPU time usage: 0.050 seconds
+Real time usage: 0.144 seconds
+Preprocessor visited node count: 129/1000000
+Post&#8208;expand include size: 2284/2097152 bytes
+Template argument size: 844/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -225,12 +213,11 @@ Unstrip post&#8208;expand size: 909/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.231      1 -total
- 78.90%    5.705      1 Template:Macro
- 17.39%    1.258      3 Template:FileName
+100.00%    2.976      1 Template:Macro
+100.00%    2.976      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260119191602 and revision id 1741106. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260119193623 and revision id 1741108. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
