--- a/wiki/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/Macro_Cut_Object_For_Magnets.html
@@ -13,13 +13,13 @@ Macro Cut Object for Magnets
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Cut an object along a plane and add aligned magnet holes with surface collision detection. Creates two parts with perfectly aligned holes for embedding magnets that allow the parts to snap together.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.19+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
+<td class="ctEven left macro-description">Cut an object along a plane and add aligned magnet holes with surface collision detection. Creates two parts with perfectly aligned holes for embedding magnets that allow the parts to snap together.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.19+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">ToolBar Icon</a><br>Author: Spkane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
 </th></tr>
 <tr>
-<td class="ctEven macro-author"><a href="index.php?title=User;Sean_P._Kane&amp;action=edit&amp;redlink=1.html" class="new" title="User:Sean P. Kane (page does not exist)">Sean P. Kane</a>
+<td class="ctEven macro-author"><a href="User;Spkane.html" title="User:Spkane">Spkane</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Download
@@ -197,15 +197,15 @@ Macro Cut Object for Magnets
 
 <!-- 
 NewPP limit report
-Cached time: 20260119193615
+Cached time: 20260119193730
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.144 seconds
+CPU time usage: 0.060 seconds
+Real time usage: 0.074 seconds
 Preprocessor visited node count: 129/1000000
-Post&#8208;expand include size: 2284/2097152 bytes
-Template argument size: 844/2097152 bytes
+Post&#8208;expand include size: 2260/2097152 bytes
+Template argument size: 820/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -213,11 +213,11 @@ Unstrip post&#8208;expand size: 909/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    2.976      1 Template:Macro
-100.00%    2.976      1 -total
+100.00%    4.130      1 Template:Macro
+100.00%    4.130      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260119193623 and revision id 1741108. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260119193732 and revision id 1741109. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
