--- a/wiki/Macro_Multi_Export.html
+++ b/wiki/Macro_Multi_Export.html
@@ -13,13 +13,13 @@ Macro Multi Export
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Spkane<br>
+<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
 </th></tr>
 <tr>
-<td class="ctEven macro-author"><a href="User;Spkane.html" title="User:Spkane">Spkane</a>
+<td class="ctEven macro-author"><a href="index.php?title=User;Sean_P._Kane&amp;action=edit&amp;redlink=1.html" class="new" title="User:Sean P. Kane (page does not exist)">Sean P. Kane</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Download
@@ -84,60 +84,55 @@ Macro Multi Export
 <li>AMF - Additive Manufacturing Format (XML-based 3D printing)</li></ul>
 <p><b>Features:</b>
 </p>
-<ul><li>Export to multiple formats in a single operation</li>
-<li>User-friendly dialog for format selection</li>
-<li>Configurable output directory and base filename</li>
-<li>Mesh tolerance settings for STL/OBJ/PLY/3MF/AMF exports</li>
-<li>Preview of files to be created</li>
-<li>Quick select buttons: "Select All", "Select None", "Reset Defaults"</li>
-<li>Default formats: STL, STEP, and 3MF are pre-selected</li></ul>
+<ul><li>Export to multiple formats in a single operation.</li>
+<li>User-friendly dialog for format selection.</li>
+<li>Configurable output directory and base filename.</li>
+<li>Mesh tolerance settings for STL/OBJ/PLY/3MF/AMF exports.</li>
+<li>Preview of files to be created.</li>
+<li>Quick select buttons: "Select All", "Select None", "Reset Defaults".</li>
+<li>Default formats: STL, STEP, and 3MF are pre-selected.</li></ul>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
-<ol><li>Select one or more objects in the 3D view that you want to export</li>
-<li>Run the macro from <b>Macro &rarr; Macros &rarr; MultiExport &rarr; Execute</b></li>
+<ol><li>Select one or more objects in the 3D view that you want to export.</li>
+<li>Run the macro from <b>Macro &rarr; Macros &rarr; MultiExport &rarr; Execute</b>.</li>
 <li>In the dialog:
-<ul><li>Review the selected objects in the "Objects to Export" section</li>
-<li>Check the formats you want to export to (STL, STEP, 3MF are selected by default)</li>
-<li>Choose an output directory using the "Browse..." button</li>
-<li>Enter a base filename (the format extension will be appended automatically)</li>
-<li>Optionally adjust mesh tolerance settings for mesh-based formats</li></ul></li>
-<li>Click "Export" to create the files</li></ol>
+<ul><li>Review the selected objects in the "Objects to Export" section.</li>
+<li>Check the formats you want to export to (STL, STEP, 3MF are selected by default).</li>
+<li>Choose an output directory using the "Browse..." button.</li>
+<li>Enter a base filename (the format extension will be appended automatically).</li>
+<li>Optionally adjust mesh tolerance settings for mesh-based formats.</li></ul></li>
+<li>Click "Export" to create the files.</li></ol>
 <figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export_dialog.png&amp;filetimestamp=20260119180351&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export_dialog.png" decoding="async" width="400" height="556" class="mw-file-element" data-file-width="1002" data-file-height="1392"></a><figcaption></figcaption></figure>
 <h2><span class="mw-headline" id="Requirements">Requirements</span></h2>
-<ul><li>FreeCAD 0.21 or later</li>
-<li>Objects with solid shapes (Part or PartDesign bodies)</li></ul>
+<ul><li>FreeCAD 0.21 or later.</li>
+<li>Objects with solid shapes (Part or PartDesign bodies).</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<ol><li>Download the macro file: <a href="index.php?title=Special;Upload&amp;wpDestFile=MultiExport.FCMacro.html" class="new" title="MultiExport.FCMacro">MultiExport.FCMacro</a></li>
-<li>Copy the file to your FreeCAD macro directory:
-<ul><li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Macro/</span></li>
-<li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Macro/</span></li>
-<li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Macro/</span></li></ul></li>
-<li>Optionally, download the toolbar icon and place it in the same directory</li></ol>
+<ul><li>Install via the <b>FreeCAD Addon manager</b> or manually from the <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-macro-3d-print-multi-export/">freecad-macro-3d-print-multi-export repo on GitHub</a>.</li></ul>
+<p><br>
+</p>
 <h2><span class="mw-headline" id="Source_Code">Source Code</span></h2>
 <p>The full source code is hosted on GitHub:
 </p>
-<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-macro-3d-print-multi-export/blob/main/macro/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro on GitHub</a></li></ul>
-<h2><span class="mw-headline" id="Script">Script</span></h2>
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export.png&amp;filetimestamp=20260106011316&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p><p><br>
-<b>Macro_Multi_Export.FCMacro</b>
-</p><p>- <a rel="nofollow" class="external free" href="https://github.com/spkane/freecad-macro-3d-print-multi-export/blob/main/macro/Multi_Export/MultiExport.FCMacro">https://github.com/spkane/freecad-macro-3d-print-multi-export/blob/main/macro/Multi_Export/MultiExport.FCMacro</a>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-macro-3d-print-multi-export/">freecad-macro-3d-print-multi-export on GitHub</a></li></ul>
+<p><br>
 </p>
 <h2><span class="mw-headline" id="Links">Links</span></h2>
-<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-macro-3d-print-multi-export/">Full Documentation</a> - Complete guides and tutorials</li>
-<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-macro-3d-print-multi-export">GitHub Repository</a> - Source code and issue tracker</li>
-<li><a href="Std_Export.html" title="Std Export">Std Export</a> - FreeCAD's built-in export function</li>
-<li><a href="Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats</li></ul>
+<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-macro-3d-print-multi-export/">Full Documentation</a> - Complete guides and tutorials.</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-macro-3d-print-multi-export">GitHub Repository</a> - Source code and issue tracker.</li>
+<li><a href="Std_Export.html" title="Std Export">Std Export</a> - FreeCAD's built-in export function.</li>
+<li><a href="Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats.</li></ul>
+<p><br>
+</p>
 <!-- 
 NewPP limit report
-Cached time: 20260119191600
+Cached time: 20260119194559
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.073 seconds
-Preprocessor visited node count: 135/1000000
-Post&#8208;expand include size: 2508/2097152 bytes
-Template argument size: 806/2097152 bytes
+CPU time usage: 0.045 seconds
+Real time usage: 0.108 seconds
+Preprocessor visited node count: 104/1000000
+Post&#8208;expand include size: 2153/2097152 bytes
+Template argument size: 733/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -145,12 +140,11 @@ Unstrip post&#8208;expand size: 852/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.298      1 -total
- 69.36%    3.675      1 Template:Macro
- 24.27%    1.286      3 Template:FileName
+100.00%    4.377      1 Template:Macro
+100.00%    4.377      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260119191600 and revision id 1741035. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260119194610 and revision id 1741110. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
