--- a/wiki/Macro_Multi_Export.html
+++ b/wiki/Macro_Multi_Export.html
@@ -13,13 +13,13 @@ Macro Multi Export
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
+<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Spkane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
 </th></tr>
 <tr>
-<td class="ctEven macro-author"><a href="index.php?title=User;Sean_P._Kane&amp;action=edit&amp;redlink=1.html" class="new" title="User:Sean P. Kane (page does not exist)">Sean P. Kane</a>
+<td class="ctEven macro-author"><a href="User;Spkane.html" title="User:Spkane">Spkane</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Download
@@ -124,15 +124,15 @@ Macro Multi Export
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260119194559
+Cached time: 20260119194740
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.108 seconds
+CPU time usage: 0.050 seconds
+Real time usage: 0.102 seconds
 Preprocessor visited node count: 104/1000000
-Post&#8208;expand include size: 2153/2097152 bytes
-Template argument size: 733/2097152 bytes
+Post&#8208;expand include size: 2129/2097152 bytes
+Template argument size: 709/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -140,11 +140,11 @@ Unstrip post&#8208;expand size: 852/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.377      1 Template:Macro
-100.00%    4.377      1 -total
+100.00%    8.946      1 Template:Macro
+100.00%    8.946      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260119194610 and revision id 1741110. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260119194742 and revision id 1741111. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
